feat: endpoins for enrollments and courses implemented